# ImplementAMeeting

./: .gitignore  PLAN.md  main.py  requirements.txt  restart.sh  run.sh  stop.sh
.agents/rules/: AGENTS.md
app/: config.py
app/routes/: chat.py  transcription.py
backend/: agents.db  app_data.db  database.py  main.py  models.py  models_config.json  prompts.py  pyproject.toml
backend/agents/: copilot.py  summarizer.py
backend/tests/: test_api.py
frontend/: package.json
frontend/src/app/: globals.css
frontend/src/app/meetings/: page.tsx
frontend/src/app/meetings/[id]/: page.tsx
frontend/src/app/meetings/new/: page.test.tsx  page.tsx
frontend/src/lib/: api.ts  meetingSessionState.test.ts  meetingSessionState.ts
old_app/: restart.sh
old_app/app/: __init__.py  context.py  helpers.py  models.py
old_app/app/routes/: summary.py
old_app/prompts/: summary_prompt.md
old_app/static/: index.html
old_app/static/css/: styles.css
old_app/static/js/: app.js
prompts/: chat_prompt.md  summary_prompt.md  system_prompt.md
static/: index.html
